src/objects/Partner_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Category__c</fullName>
        <formula>TEXT(Partner_Activity_Type__r.Category__c)</formula>
        <label>Activity Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>Date of when the activity happened</inlineHelpText>
        <label>Activity Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Channel_Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Channel Program</label>
        <referenceTo>ChannelProgram</referenceTo>
        <relationshipLabel>Partner Activities</relationshipLabel>
        <relationshipName>Partner_Activities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <formula>IF( Partner_Activity_Type__r.Automatic_Expiry__c ,  Activity_Date__c +  Partner_Activity_Type__r.Expiry_Period__c , NULL)</formula>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>My_Account_Activity__c</fullName>
        <description>field to filter based on current user&apos;s account</description>
        <formula>Partner_Account__c = $User.Account_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Account Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Activity__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Boolean used in Process and Triggers to check if an activity was just created or already existing</description>
        <label>New Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This Participant doesn&apos;t belong to the specified Account</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Partner_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Activities</relationshipLabel>
        <relationshipName>Partner_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Activities</relationshipLabel>
        <relationshipName>Partner_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_Activity_Type__c</fullName>
        <label>Partner Activity Type</label>
        <referenceTo>Partner_Activity_Type__c</referenceTo>
        <relationshipLabel>Partner Activities</relationshipLabel>
        <relationshipName>Partner_Activities</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Points_Awarded__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>If left empty or untouched, it will read from the default activity type&apos;s point value</inlineHelpText>
        <label>Points Awarded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Partner Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Activity_Category__c</columns>
        <columns>Description__c</columns>
        <columns>Activity_Date__c</columns>
        <columns>Participant__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>Channel_Program__c</columns>
        <columns>Partner_Activity_Type__c</columns>
        <columns>Points_Awarded__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Recent_Points_Activities</fullName>
        <columns>Activity_Date__c</columns>
        <columns>Partner_Activity_Type__c</columns>
        <columns>Points_Awarded__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Account_Activity__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Recent Points Activities</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PA-{0000000}</displayFormat>
        <label>Partner Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>